--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -1,6 +1,4 @@
-name: Docker Build And Push To Docker Hub
-
-name: Publish Docker image
+name: Publish Docker image to Docker Hub and Github
 
 on:
   release:
