--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -1,8 +1,10 @@
 name: Publish Docker image to Docker Hub and Github
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [ main ]
+  # release:
+  #   types: [published]
 
 jobs:
   push_to_registries:
@@ -43,6 +45,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          # platforms:
-          #   - "linux/amd64"
-          #   - "linux/arm64"
+          platforms: linux/amd64,linux/arm64
