--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -1,10 +1,10 @@
 name: Publish Docker image to Docker Hub and Github
 
 on:
-  push:
-    branches: [ main ]
-  # release:
-  #   types: [published]
+  # push:
+  #   branches: [ main ]
+  release:
+    types: [published]
 
 jobs:
   push_to_registries:
