--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -9,6 +9,13 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - download_arch: x86_64
+            platforms: [linux/amd64]
+          - download_arch: aarch64
+            platforms: [linux/arm64]
     steps:
       -
         name: Checkout
@@ -30,6 +37,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platforms }}
+          buildargs: ARCH=${{matrix.buildargs }}
           push: true
           tags: spuder/openscad:latest
