--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -9,13 +9,6 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - download_arch: x86_64
-            platforms: linux/amd64
-          - download_arch: aarch64
-            platforms: linux/arm64
     steps:
       -
         name: Checkout
@@ -37,7 +30,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: ${{ matrix.platforms }}
-          buildargs: ARCH=${{matrix.buildargs }}
+          platforms: linux/amd64, linux/arm64
           push: true
           tags: spuder/openscad:latest
