--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -33,3 +33,11 @@ jobs:
           platforms: linux/amd64, linux/arm64
           push: true
           tags: spuder/openscad:latest
+          build-args: |
+            OPENSCAD_VERSION=2021.01
+      - 
+        name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v2
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
