--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -38,7 +38,7 @@ jobs:
       - 
         name: Docker Hub Description
         uses: peter-evans/dockerhub-description@v2
-        env:
+        with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           repository: spuder/openscad
